k8s-hl/dev/mett-dataportal-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-dataportal-api-dev
  namespace: mett-dataportal-hl-dev
  labels:
    app: test-dataportal-api-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-dataportal-api-dev
  template:
    metadata:
      labels:
        app: test-dataportal-api-dev
    spec:
      securityContext:
        runAsUser: 7123
        runAsGroup: 1347
      containers:
        - image: quay.io/microbiome-informatics/mett-dataportal-api:v0.0.93a
          imagePullPolicy: Always
          name: test-dataportal-api-dev
          ports:
            - containerPort: 8000
              name: gunicorn
      imagePullSecrets:
        - name: quay-pull-secret

---

apiVersion: v1
kind: Service
metadata:
  name: test-dataportal-api-svc-dev
  namespace: mett-dataportal-hl-dev
  labels:
    app: test-dataportal-api-dev
spec:
  type: NodePort
  selector:
    app: test-dataportal-api-dev
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 31027
