k8s-hl/dev/mett-dataportal-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-dataportal-react-app-dev
  namespace: mett-dataportal-hl-dev
  labels:
    app: test-dataportal-react-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-dataportal-react-app-dev
  template:
    metadata:
      labels:
        app: test-dataportal-react-app-dev
    spec:
      containers:
        - image: quay.io/microbiome-informatics/mett-dataportal-react-app:v0.0.93a
          imagePullPolicy: Always
          name: test-dataportal-react-app-dev
          ports:
            - containerPort: 80
              name: react-app
      imagePullSecrets:
        - name: quay-pull-secret

---

apiVersion: v1
kind: Service
metadata:
  name: test-dataportal-react-app-svc-dev
  namespace: mett-dataportal-hl-dev
  labels:
    app: test-dataportal-react-app-dev
spec:
  type: NodePort
  selector:
    app: test-dataportal-react-app-dev
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31028
